--- a/CXYO/app/src/main/res/layout/fragment_product_box.xml
+++ b/CXYO/app/src/main/res/layout/fragment_product_box.xml
@@ -15,7 +15,7 @@
     <TextView
         android:id="@+id/product_title"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_weight="1"
         android:padding="2dp"
         android:text="TextView" />
@@ -23,7 +23,7 @@
     <TextView
         android:id="@+id/product_price"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="25dp"
         android:layout_weight="1"
         android:padding="2dp"
         android:text="TextView" />
